@startuml hisma_flutter_class_diagram
!$flutter = LightBlue
!$hisma_flutter = LightGreen
!$app = LightYellow


class Application #$app
class NavigationMachine<S, E, T> #$app
class HismaRouterDelegate<S, E> #$hisma_flutter
class HismaRouterGenerator<S, E> #$hisma_flutter
class Map<S, Presentation> #$app
class MaterialApp #$flutter
class StateStack #$hisma_flutter

Application -- MaterialApp : build
NavigationMachine -* Application
Application *-- HismaRouterGenerator

MaterialApp o-- HismaRouterDelegate

NavigationMachine o--o HismaRouterDelegate

HismaRouterDelegate -* HismaRouterGenerator

HismaRouterGenerator *-- Map
HismaRouterDelegate o-- Map

StateStack -* HismaRouterDelegate  

@enduml
